2004-01-26 Aarno Syv\132nen <aarno@gni.ch>
    Committed bugfixes by Paul Bagyenda.
    * gwlib/date.c: Bugfix in function making ISO dates
    * gwlib/mime.c: Add random characters to the boundary. Safer way to
      detect "non-standard" mime entity ending (\n, not \r\n). Correct
      a misspelling.
    * wap/wsp_headers.[c|h] More public functions. Accept '"' in addi-
      tion of WSP_QUOTE. Correct handling of quoted parameters.
    Thanks a lot to Paul !

2004-01-26 Stipe Tolj  <tolj@wapme-systems.de>
    * gwlib/dbpool_mysq.c, gwlib/utils.c: some source code beautifying. 
      No logic change.

2004-01-23  Alexander Malysh  <a.malysh@centrium.de>
    * gw/wap_push_ppg_pushuser.c: forgot this one by last commit.

2004-01-23  Alexander Malysh  <a.malysh@centrium.de>
    * doc/userguide/userguide.xml, gw/bb_smscconn.c, gw/smsbox.c, gw/smscconn.c,
      gw/smscconn_p.h, gw/urltrans.[ch], gwlib/cfg.def, gwlib/regex.[ch]:
      Applied a "big" regexp patch from "David Schmitz" <schmitz@wapme-systems.de>.
      This patch breaks currently kannel build when no 'regexp.h' found. David
      is working on resolution and most modern OSs has regexp support anyway.
      Msg-Id: <400D4417.9010306@wapme-systems.de>.


2004-01-23  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bb_boxc.c: fixed double free.
      Thanks to Benjamin Lee for pointing this.
      Msg-Id: <20040123123650.GA22906@xaos.realthought.net>.

2004-01-23  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/octstr.c: fixed bug that space was not replaced when all chars
      were safe except a space.

2004-01-22  Stipe Tolj  <tolj@wapme-systems.de>
    * LICENSE, *.[c|h|h.in|def]: moved copyright to 2004. Even while I realize
      this makes me one year older too ;) - no logic change.
 
2004-01-22  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_http.c: bugfix of brunet MT interface. The new UUIDs have
      broke the TransactionID syntax. Brunet expects 32 bytes hex value and